# SpecCodeConv

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README.md
code-converter/: BaseASTConsumer.cpp  BaseASTConsumer.h  CMakeLists.txt  Classes.h  DeclExtractor.cpp  DeclExtractor.h  DeclLinker.cpp  DeclLinker.h  DeclTracker.cpp  DeclTracker.h  DirectiveFinder.cpp  DirectiveFinder.h  DirectiveHandler.cpp  DirectiveHandler.h  DirectiveList.cpp  DirectiveList.h  FakeDirectiveHandler.cpp  FakeDirectiveHandler.h  Globals.cpp  Globals.h  Main.cpp  Makefile  NoEditStmtPrinter.cpp  NoEditStmtPrinter.h  OMPPragmaHandler.cpp  OMPPragmaHandler.h  PragmaDirective.cpp  PragmaDirective.h  StmtPrinter.cpp  StmtPrinter.h  Tools.cpp  Tools.h  VarCollector.cpp  VarCollector.h  VarTraverser.cpp  VarTraverser.h
